2014-11-02  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Frameworks/StepTalk/STRemoteConversation.m
	(-initWithEnvironmentName:host:language:, -open,
	-setLanguage:, -language): Correctly initialize the scripting
	language used in a remote conversation.

2014-11-02  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Frameworks/StepTalk/STRemoteConversation.m (-open): Force use of
	a socket port name server to look up servers on other hosts.

2014-11-02  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Frameworks/StepTalk/STRemoteConversation.m (-connectionDidDie:):
	Fix leak of the proxy and environmentProcess attributes when a
	connection died.

2014-11-01  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Frameworks/StepTalk/NSObject+additions.h (-notEqual:, -notSame:):
	* Frameworks/StepTalk/NSObject+additions.m (-notEqual:, -notSame:):
	Add method implementations for the symbolic selectors ~= and ~~,
	which are defined in the SymbolicSelectors.stenv environment.

2014-11-01  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Frameworks/StepTalk/STClassInfo.m (-dealloc): Release superclass
	and superclassName attributes.
	* Frameworks/StepTalk/STEnvironment.m (-initWithDescription:):
	Remove duplicated RETAIN statement.

2013-05-27  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Frameworks/StepTalk/NSInvocation+additions.m
	(STGetValueOfTypeFromObject): Fix marshaling for arguments with
	type (char*).

	* Frameworks/StepTalk/NSInvocation+additions.m
	(STObjectFromValueOfType, STGetValueOfTypeFromObject): Skip const
	qualifiers in types.

2013-05-26  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Frameworks/StepTalk/STActor.m (-instanceVariables): Fix typo in
	method name.
	* Frameworks/StepTalk/STActor.m (-addInstanceVariable:):
	* Frameworks/StepTalk/STActor.m (-removeInstanceVariable:):
	New methods to add and remove instance variables.

	* Frameworks/StepTalk/STActor.h (-instanceVariableNames):
	* Frameworks/StepTalk/STActor.h (-setInstanceVariables:):